Closed
Bug 1791981
Opened 3 years ago
Closed 3 years ago
startup Crash in [@ PinCurrentAppToTaskbarWin7] with Windows 7 and 8.1
Categories
(Firefox :: Shell Integration, defect)
Tracking
()
RESOLVED
FIXED
107 Branch
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox105 | --- | unaffected |
firefox106 | + | fixed |
firefox107 | --- | fixed |
People
(Reporter: aryx, Assigned: bhearsum)
References
Details
(Keywords: crash, Whiteboard: [fidedi-pbm])
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
13 crashes by 7 installations of Windows 7 and 8.1 with Firefox 106.0b1 and 106.0b2. This looks like a new issue, see bug 1707298 and bug 1767589 for similar crashes with the old signature.
Crash report: https://crash-stats.mozilla.org/report/index/8a874a32-c8a3-4b77-9051-8ee6c0220922
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll PinCurrentAppToTaskbarWin7 browser/components/shell/nsWindowsShellService.cpp:1285
0 xul.dll PinCurrentAppToTaskbarImpl browser/components/shell/nsWindowsShellService.cpp:1467
1 xul.dll PinCurrentAppToTaskbarAsyncImpl::<lambda_4>::operator const browser/components/shell/nsWindowsShellService.cpp:1550
1 xul.dll mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/browser/components/shell/nsWindowsShellService.cpp:1543:11'>::Run xpcom/threads/nsThreadUtils.h:531
2 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:310
3 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1199
4 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:465
4 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
5 xul.dll MessageLoop::RunInternal ipc/chromium/src/base/message_loop.cc:381
5 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:374
Flags: needinfo?(bhearsum)
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
I will look into this - probably next week.
Assignee: nobody → bhearsum
Assignee | ||
Comment 2•3 years ago
|
||
Pushed by bhearsum@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/433204b5e9e3
guard against null dereference in Windows 7 taskbar pinning code r=bytesized
Assignee | ||
Comment 4•3 years ago
|
||
Comment on attachment 9296228 [details]
Bug 1791981: guard against null dereference in Windows 7 taskbar pinning code r?bytesized!
Beta/Release Uplift Approval Request
- User impact if declined: Some users will experience a start-up crash
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch is a trivial change to add a null check to existing code.
- String changes made/needed:
- Is Android affected?: No
Flags: needinfo?(bhearsum)
Attachment #9296228 -
Flags: approval-mozilla-beta?
Comment 5•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
Assignee | ||
Updated•3 years ago
|
Whiteboard: [fidedi-pbm]
Updated•3 years ago
|
Comment 6•3 years ago
|
||
Comment on attachment 9296228 [details]
Bug 1791981: guard against null dereference in Windows 7 taskbar pinning code r?bytesized!
Approved for 106.0b6, thanks!
Attachment #9296228 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•3 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•