Bug 1791981: guard against null dereference in Windows 7 taskbar pinning code r=bytesized

Differential Revision: https://phabricator.services.mozilla.com/D158140